# dharma-cli

./: Dockerfile  Makefile  Pipfile  README.md  example-file.txt  pyproject.toml  setup.py
dharma/: __init__.py  __main__.py  center_test.txt  left_test.txt  quotebook.py  right_test.txt
dharma-cli/: QuoteBook.py  main.py
doc/: dharma.1  quotebook.txt  zennin.1
tests/: integration_tests.sh  test_dharma.py  test_quotebook.py
tests/book_tests/: default_separator.txt  random_separator.txt
zennin/: __init__.py
