[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Dharma"
version = "1.0"
authors = [
  { name="Marcelo Galván", email="marcelo_galvan@protonmail.com" },
]
description = "Knowledge"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Erymer/dharma-cli"

[project.scripts]
dharma = "dharma:main"
