[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Dharma"
version = "1.0.0"
authors = [
  { name="Marcelo Galván", email="marcelo_galvan@protonmail.com" },
]
description = "Knowledge"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
"Homepage" = "https://github.com/Erymer/dharma"

[project.scripts]
dharma = "dharma:main"
